# example

./: pyproject.toml  setup.py
.github/workflows/: install.yaml  publish.yaml
